Implements simple reference picker that mimics the tag picker, adds select/deselect, cancel, syncs state, fixes bug with index get misaligned in the case of missing data, auto filters simple picker

--- a/client/src/app/modules/pixlisecore/components/reference-picker/reference-picker.component.scss
+++ b/client/src/app/modules/pixlisecore/components/reference-picker/reference-picker.component.scss
@@ -80,6 +80,10 @@
         display: flex;
         align-items: center;
         gap: 8px;
+
+        push-button {
+          padding: 0;
+        }
       }
 
       push-button {
@@ -221,6 +225,12 @@
               }
 
               .field-content {
+                display: flex;
+
+                input {
+                  width: 100%;
+                }
+
                 .collapsed-name {
                   font-size: 16px;
                   font-weight: 600;
@@ -674,4 +684,10 @@
     margin-top: -1px;
     margin-bottom: -1px;
   }
+}
+
+.collapsed-meta {
+  color: rgb(var(--clr-gray-40));
+  font-size: 10px;
+  font-weight: 400;
 }
